syntax = "proto3";

package types;
option go_package = "github.com/bluesky-social/kvdb/internal/types";

import "google/protobuf/timestamp.proto";

message User {
  string username = 1;
  bytes password_hash = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp last_login = 4;
  bool enabled = 5;
  repeated UserACLRule rules = 6;
}

message UserACLRule {
  UserAccessLevel level = 1;
}

enum UserAccessLevel {
  USER_ACCESS_LEVEL_UNSPECIFIED = 0;
  USER_ACCESS_LEVEL_CLUSTER_ADMIN = 1;
  USER_ACCESS_LEVEL_READ_WRITE = 3;
  USER_ACCESS_LEVEL_READ= 4;
}
